--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="root"></div>
     <script src="../src/App.js"></script>
-    <script src="../src/components/location-table.js"></script>
+    <script src="../src/components/locations.jsx"></script>
     <script>
       ReactDOM.render(<App />, document.getElementById('root'));
     </script>
